Fix bug: blurry text when using translate

--- a/src/components/todoDetails/todoDetails.css
+++ b/src/components/todoDetails/todoDetails.css
@@ -12,7 +12,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50.5%, -50.5%); /* translate(-50%, -50%) makes it blurry. This is a trick for quick fix */
   overflow: scroll;
   -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
   scrollbar-width: none;  /* Hide scrollbar for Firefox */
